--- a/src/js/components/getCard_1/getCard1.scss
+++ b/src/js/components/getCard_1/getCard1.scss
@@ -16,6 +16,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 140px;
+        height: 140px;
         border-radius: 50%;
         padding: 22px;
         background: #C1F1C6;
