--- a/src/js/pages/formPage/form.scss
+++ b/src/js/pages/formPage/form.scss
@@ -69,7 +69,7 @@
     margin-bottom: 15px;
 }
 .error{
-    border: 1px solid rgba(255, 108, 108, .8);
+    //border: 1px solid rgba(255, 108, 108, .8);
 }
 .error-lable{
     color: rgb(22, 22, 22, .9);
