--- a/src/js/pages/formPage/form.scss
+++ b/src/js/pages/formPage/form.scss
@@ -191,5 +191,11 @@
 
 
 // ------ SELECTION + OPTION ------
-
+select, option{
+    height: 40px;
+    padding: 10px;
+    background: #ffd8d8;
+    font-family: 'Inter';
+    cursor: pointer;
+}
 
